# math-expr

./: .envrc  .gitignore  cabal.project  default.nix  math-expr.cabal
nix/: sources.json
src/: MathExpr.hs
src/MathExpr/: Parser.hs  Tests.hs  Transformations.hs  Types.hs  Zippable.hs
test/: Test.hs
