cabal-version:      2.4
name:               math-expr
version:            0.1.0.0

synopsis: Haskell library to represent, parse and evaluate mathematical expressions

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: Apache-2.0

-- A copyright notice.
-- copyright:
-- category:

library

    exposed-modules:
        MathExpr
        MathExpr.Tests
        MathExpr.Types
        MathExpr.Parser
        MathExpr.Zippable
        MathExpr.Transformations

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
                          
    build-depends:    QuickCheck
                    , base
                    , chronos
                    , containers
                    , hspec
                    , lens
                    , mtl
                    , parsec
                    , sop-core
                    , text
                    , time 
                    , unordered-containers
                    , vector
                    , yahp
                     
    ghc-options:
     -Werror=partial-fields
     -Werror=incomplete-record-updates
     -Werror=incomplete-uni-patterns
     -Werror=incomplete-patterns
     -Werror=unused-top-binds -Werror=unused-local-binds -Werror=unused-pattern-binds
     -Werror=unused-matches
     -Werror=overflowed-literals
     -Werror=overlapping-patterns
     -Werror=missing-fields
     -Werror=typed-holes
     -Werror=empty-enumerations
     -Werror=unrecognised-pragmas
     -Werror=missing-methods
     -Wall
     -Wno-orphans
     -Wno-missing-signatures
     -Wno-unused-do-bind
     -Wno-name-shadowing
     -Wno-unticked-promoted-constructors
     -Wcompat
      -j +RTS -A128m -n2m -RTS

    default-extensions:
      CPP
      DataKinds
      DefaultSignatures
      DerivingVia
      FunctionalDependencies
      GADTs
      LambdaCase
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedLabels
      OverloadedStrings
      QuasiQuotes
      RecordWildCards
      TypeFamilies
                    
    hs-source-dirs:   src
    default-language: GHC2021

test-suite math-expr-test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  ghc-options: -Wall -rtsopts -threaded
    -j +RTS -A128m -n2m -RTS
  hs-source-dirs:
    test
  build-depends:
                    base
                , math-expr
  default-language: Haskell2010
           
-- Local Variables:
-- compile-command: "nix-shell --run 'cabal exec -- ghc-pkg list'"
-- End: